# data-rentgen

./: .dockerignore  .env.docker  .env.local  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .spdx-license-header.txt  CONTRIBUTING.rst  LICENSE.txt  Makefile  README.md  README.rst  SECURITY.rst  codecov.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/workflows/: changelog.yml  codeql-analysis.yml  dev-release.yml  image_release.yml  release.yml  test.yml
arrakis/: __init__.py
arrakis/backend/: __init__.py  __main__.py  export_openapi_schema.py
arrakis/backend/api/: handlers.py  monitoring.py  router.py
arrakis/backend/db/: factory.py
arrakis/backend/dependencies/: __init__.py
arrakis/backend/middlewares/: __init__.py  application_version.py  cors.py  logging.py  openapi.py  request_id.py  static_files.py
arrakis/backend/services/: __init__.py  uow.py
arrakis/backend/settings/: __init__.py  database.py
arrakis/backend/utils/: slug.py
arrakis/commons/dto/: __init__.py  pagination.py
arrakis/commons/errors/: __init__.py  base.py  registration.py
arrakis/commons/exceptions/: __init__.py  base.py
arrakis/commons/schemas/: __init__.py  ping.py
arrakis/consumer/: __init__.py  __main__.py  handlers.py
arrakis/consumer/settings/: __init__.py  kafka.py  security.py
arrakis/db/: factory.py  settings.py
arrakis/db/migrations/: env.py
arrakis/db/models/: README.rst  __init__.py  address.py  base.py  dataset.py  interaction.py  job.py  location.py  operation.py  run.py  runner.py  schema.py  storage.py  user.py
arrakis/db/repositories/: base.py
arrakis/db/scripts/: create_partitions.py
arrakis/db/utils/: fields.py
arrakis/logging/: exceptions.py  settings.py  setup_logging.py
arrakis/logging/presets/: colored.yml  json.yml  plain.yml
arrakis/server/: __init__.py  __main__.py
arrakis/server/api/: handlers.py  monitoring.py  router.py
arrakis/server/dependencies/: __init__.py
arrakis/server/dto/: __init__.py
arrakis/server/errors/: __init__.py  registration.py
arrakis/server/exceptions/: __init__.py
arrakis/server/middlewares/: __init__.py  application_version.py  cors.py  openapi.py  request_id.py  static_files.py
arrakis/server/schemas/: __init__.py
arrakis/server/scripts/: export_openapi_schema.py
arrakis/server/services/: __init__.py  uow.py
arrakis/server/settings/: __init__.py  application_version.py  cors.py  openapi.py  request_id.py  server.py  static_files.py
data_rentgen/: __init__.py
data_rentgen/commons/errors/: __init__.py  registration.py
data_rentgen/commons/exceptions/: __init__.py  entity.py
data_rentgen/consumer/: __init__.py  __main__.py  handlers.py  saver.py  subscribers.py
data_rentgen/consumer/extractors/: __init__.py  batch.py  batch_extraction_result.py  batch_extractor.py  column_lineage.py  dataset.py  input.py  interaction.py  job.py  location.py  operation.py  output.py  run.py  schema.py  user.py  uuid.py
data_rentgen/consumer/openlineage/: __init__.py  base.py  dataset.py  job.py  run.py  run_event.py  uuid.py
data_rentgen/consumer/settings/: __init__.py  compression.py  consumer.py  kafka.py  producer.py  security.py
data_rentgen/db/: __init__.py  factory.py  settings.py
data_rentgen/db/migrations/: __main__.py  alembic.ini  env.py
data_rentgen/db/models/: README.rst  __init__.py  address.py  base.py  column_lineage.py  custom_properties.py  custom_user_properties.py  dataset.py  dataset_column_relation.py  dataset_symlink.py  input.py  interaction.py  job.py  job_type.py  location.py  operation.py  output.py  personal_token.py  run.py  runner.py  schema.py  sql_query.py  status.py  storage.py  tag.py  tag_value.py  user.py
data_rentgen/db/repositories/: base.py  column_lineage.py  dataset.py  dataset_column_relation.py  dataset_symlink.py  input.py  interaction.py  io_dataset_relation.py  job.py  run.py  (+10 more)
data_rentgen/dependencies/: __init__.py
data_rentgen/dto/: __init__.py  column_lineage.py  dataset.py  dataset_column_relation.py  dataset_symlink.py  input.py  interaction.py  job.py  job_type.py  location.py  operation.py  output.py  pagination.py  run.py  schema.py  sql_query.py  tag.py  user.py
data_rentgen/exceptions/: __init__.py  auth.py  base.py  entity.py  redirect.py
data_rentgen/http2kafka/: __init__.py  __main__.py  settings.py
data_rentgen/logging/: exceptions.py  settings.py  setup_logging.py
data_rentgen/openlineage/: __init__.py  base.py  dataset.py  job.py  run.py  run_event.py
data_rentgen/server/: __init__.py  __main__.py
data_rentgen/services/: __init__.py  uow.py
data_rentgen/utils/: __init__.py  uuid.py
docker/: Dockerfile  Dockerfile.backend  Dockerfile.consumer  Dockerfile.server  consumer.sh  entrypoint.sh  server.sh
docs/: comparison.rst  conf.py  entities.rst  index.rst  install.rst  robots.txt
docs/_static/: openapi.json  redoc.html  swagger_http2kafka.html  swagger_server.html
docs/backend/: architecture.rst  install.rst
docs/changelog/: 0.1.0.rst  0.2.0.rst  0.2.1.rst  0.3.0.rst  0.3.1.rst  0.4.0.rst  0.4.1.rst  0.4.2.rst  0.4.3.rst  0.4.4.rst  0.4.5.rst  0.4.6.rst  0.4.7.rst  0.4.8.rst  index.rst
docs/entities/: index.rst
docs/personal_tokens/: index.rst
docs/quickstart/: index.rst  install.rst  setup_airflow.rst  setup_spark.rst
docs/reference/: architecture.rst
mddocs/: en.yml
mddocs/docs/: index.md
tests/: conftest.py
tests/fixtures/: alembic.py  async_engine.py  async_session.py  db_settings.py  mocks.py  settings.py  test_app.py  test_client.py
tests/resources/: events_airflow.jsonl  events_spark.jsonl  events_unknown.jsonl
tests/test_consumer/: test_example.py
tests/test_database/: test_migrations.py
tests/test_http2kafka/: test_openlineage_http.py
tests/test_server/: test_get_datasets.py  test_get_jobs.py  test_get_lineage.py  test_get_operations_by_id.py  test_get_operations_by_run_id.py  test_get_runs_by_id.py  test_get_runs_by_job_id.py  test_get_runs_by_parent_run_id.py  test_search.py
(+879 files in other folders)
